# skillio

./: .gitignore  LICENSE  README.md  pyproject.toml
design/: tokens-he.json  tokens.json
landing/: index.html
skillio/: __init__.py  cli.py
skillio/core/: __init__.py  install.py  search.py
skillio/index/: schema.yaml  skills.yaml
